@@ -1,3 +1,13 @@
+2007-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Reads URIs from stdin when "-i -" is specified.
+	* src/UriFileListParser.h, src/UriFileListParser.cc: Removed.
+	* src/UriListParser.h, src/UriListParser.cc: New class.
+	* src/StreamUriListParser.h: New class.
+	* src/FileUriListParser.h: New class.
+	* src/main.cc (main): Use StreamUriListParser and FileUriListParser
+	instead of UriFileListParser.
+
 2007-07-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Made console readout more readable.
